# gsyncio

./: .gitignore  10M_CONCURRENT_TASKS.md  BATCH_SPAWN_OPTIMIZATIONS.md  BENCHMARK_SUMMARY_2026.md  COMPARISON.md  IMPROVEMENTS.md  LICENSE  NATIVE_C_FIBERS_PLAN.md  PERFORMANCE_ANALYSIS_AND_OPTIMIZATIONS.md  README.md  benchmark.py  benchmark_quick.py  build_output.txt  final_log_2.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_2000_tasks.py  test_2000_waitgroup.go  test_2000_waitgroup.py  test_50000_tasks.py  test_chan_iter.py  test_channel_feedback.py  test_debug.py  test_minimal.py  test_native_channels.py  test_native_core.py  test_segfault.py  test_select.py  test_simple_chan.py  test_sync_debug.py  test_sync_nosleep.py  test_task_tracking.py  test_unbuffered_chan.py  victory_log.txt
.benchmarks/: benchmark_report_20260320_064304.md
benchmarks/: BENCHMARK_COMPARISON.md  BENCHMARK_COMPARISON_2024.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_INTELLIGENT_WORKER.md  BENCHMARK_SUMMARY.md  CHANGES_SUMMARY.md  COMPARISON_RESULTS.md  COMPLETE_BENCHMARK_RESULTS.md  FINAL_BENCHMARK_RESULTS.md  QUICK_COMPARISON.md  __init__.py  asyncio_benchmark.py  benchmark.py  benchmark_10m.py  benchmark_asyncio.py  benchmark_batch_spawn.py  benchmark_c_tasks.py  benchmark_comparison.txt  benchmark_comparison_all.txt  benchmark_full.py  benchmark_go  benchmark_go.go  benchmark_gsyncio.py  benchmark_quick.py  benchmark_runner.py  benchmark_spawn_quick.py  compare_all.py  compare_benchmarks.py  go_benchmark.go  gsyncio_benchmark.py  pytest_benchmark.py  run_all.sh  run_all_10m.sh  test_batch_fast.py
csrc/: c_tasks.c  c_tasks.h  channel.c  channel.h  evloop.c  evloop.h  fiber.c  fiber.h  fiber_pool.c  fiber_pool.h  future.c  future.h  io_uring.c  io_uring.h  native_io.c  native_io.h  net.c  net.h  scheduler.c  scheduler.h  select.c  select.h  task.c  task.h  timer.c  timer.h  waitgroup.c  waitgroup.h  worker_manager.c  worker_manager.h
docs/: C_TASKS_GUIDE.md  INTELLIGENT_WORKER_MANAGER.md  LOCK_FREE_COUNTING.md  WORKER_CONFIGURATION.md
examples/: __init__.py  async_example.py  channel_example.py  go_producer_consumer.py  performance_comparison.py  select_example.py  task_example.py  waitgroup_example.py
gsyncio/: __init__.py  _gsyncio_core.h  _gsyncio_core.pyx  _gsyncio_native_io.pyx  (+10 more)
(+37 files in other folders)
